# nemesis

./: .gitignore  .travis.yml  CHANGES  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  configure  configure.ac  nemesis.c  run_tests.py  setup.py
tests/mpi/: test_application.py  test_communicator.py  test_launcher.py
